--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 apturl==0.5.2
 bcrypt==3.2.0
 blinker==1.4
+bottle==0.12.25
 Brlapi==0.8.3
 certifi==2020.6.20
 chardet==4.0.0
@@ -26,6 +27,7 @@ launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 lockfile==0.12.2
+loguru==0.7.2
 louis==3.20.0
 macaroonbakery==1.3.1
 Mako==1.1.3
